Fri Feb 14 00:51:32 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* create-bucket.c (ports_create_bucket): Initialize rpcs, flags, &
	count fields in RET.

Thu Sep 12 16:19:35 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libports.so): Delete special depedency.

Wed Aug  7 15:28:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ports.h (_ports_create_port_internal,
	ports_create_port_noinstall): New declarations.

Thu Jul 18 22:59:14 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (SRCS): Add create-port-noinstall.c and create-internal.c.
	* create-port-noinstall.c: New file.
	* create-port.c (ports_create_port): Guts deleted; call new work
	function. 
	* create-internal.c:  New file; all the guts from create-port.c.

Wed Jul  3 14:13:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* get-right.c (ports_get_right): Supply correct sync value in
 	notification request.

Mon May  6 16:33:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ports.h (ports_allocate_port, ports_intern_external_port):
 	Delete obsolete declarations.
	* allocate-port.c, intern-external-port.c: Delete files.
	* Makefile (SRCS): Delete `intern-external-port.c' and
 	`allocate-port.c'.

Sun Apr 28 15:22:58 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* allocate-port.c: Add obsolescence link warning.
	* intern-external-port.c: Add obsolescence link warning.

Fri Mar 29 15:21:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* end-rpc.c (ports_end_rpc): Acquire _PORTS_LOCK before calling
	_ports_remove_notified_rpc.

Fri Mar 29 09:04:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* reallocate-from-external.c (ports_reallocate_from_external):
 	Require port to have a current port right.
	* reallocate-port.c (ports_reallocate_port): Likewise.

	* complete-deallocate.c (_ports_complete_deallocate): Only drop
 	port right if it isn't already null.

	* transfer-right.c: New file.